--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
+        <activity android:name=".ActivityArticle"/>
     </application>
 
 </manifest>
